Project

General

Profile

Actions

Bug #36306

closed

monstore tool rebuild does not generate creating_pgs

Added by Sage Weil over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The rebuild function does not populate creating_pgs's created_pools. this leads to every (existing) pg being (re)created, which is fine on a young cluster but generates a huge amount of work for an aged cluster.

See ceph-devel thread 'ceph-users] Mimic offline problem'.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #36433: mimic: monstore tool rebuild does not generate creating_pgsResolvedNathan CutlerActions
Copied to RADOS - Backport #36434: luminous: monstore tool rebuild does not generate creating_pgsResolvedPrashant DActions
Actions #1

Updated by Sage Weil over 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to mimic,luminous
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36433: mimic: monstore tool rebuild does not generate creating_pgs added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #36434: luminous: monstore tool rebuild does not generate creating_pgs added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF