ceph-monstore-tool: rebuild creating_pgs

In particular, we need to rebuild the created_pools set or else the mon
will try to recreate every PG in the system.  On an aged cluster, that
is extremely expensive, and will break things.

Fixes: http://tracker.ceph.com/issues/36306
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 0182931cfb39894141a6f94c3f4dbf54e9c3d897)